@@ -106,7 +106,7 @@ sub warning(&) {
 # so we do not check again via END
 sub done_testing {
     if (Test2::Tools::Basic->can('done_testing')) {
-        if (not $no_end_test) {
+        if (not $no_end_test and not $done_testing_called) {
             # we could use $ctx to create the test, which means not having to adjust Level,
             # but then we need to make _builder Test2-compatible, which seems like a PITA.
             local $Test::Builder::Level = $Test::Builder::Level + 3;
@@ -120,7 +120,7 @@ sub done_testing {
         # only do this at the end of all tests, not at the end of a subtest
         my $builder = _builder;
         my $in_subtest_sub = $builder->can('in_subtest');
-        if (not $no_end_test
+        if (not $no_end_test and not $done_testing_called
             and not ($in_subtest_sub ? $builder->$in_subtest_sub : $builder->parent)) {
             local $Test::Builder::Level = $Test::Builder::Level + 3;
             had_no_warnings('no (unexpected) warnings (via done_testing)');
@@ -132,6 +132,28 @@ sub done_testing {
     else {
         die 'no done_testing available via a Test module';
     }
+}
+
+# we also monkey-patch Test::Builder::done_testing (which is called by Test::More::done_testing),
+# in case Test::More was loaded after Test::Warnings and therefore its version of done_testing was
+# imported into the test rather than ours.
+if (Test::Builder->can('done_testing')) {
+    no strict 'refs';
+    my $orig = *{'Test::Builder::done_testing'}{CODE};
+    no warnings 'redefine';
+    *{'Test::Builder::done_testing'} = sub {
+        # only do this at the end of all tests, not at the end of a subtest
+        my $builder = _builder;
+        my $in_subtest_sub = $builder->can('in_subtest');
+        if (not $no_end_test and not $done_testing_called
+            and not ($in_subtest_sub ? $builder->$in_subtest_sub : $builder->parent)) {
+            local $Test::Builder::Level = $Test::Builder::Level + 3;
+            had_no_warnings('no (unexpected) warnings (via done_testing)');
+            $done_testing_called = 1;
+        }
+
+        $orig->(@_);
+    };
 }
 
 END {
