@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+
+use Test::Warnings;
+use Test::More;
+
+pass('we can run tests when loading Test::More after Test::Warnings');
+
+done_testing;
